--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,14 @@
 server:
   port: 8080
+
 spring:
+  profiles:
+    active: dev
+
+---
+
+spring:
+  profiles: dev
   datasource:
     username: root
     url: jdbc:mysql://localhost:3306/spring_boot_tutorial
